   ColumnType#scalaTypeTag methods and other places to workaround some of 
   Scala 2.10 reflection thread-safety problems (#364)
 * Downgraded Guava to version 14.
   Upgraded Java driver to 2.0.7.
   Upgraded Cassandra to 2.0.11. (#366)
 * Made SparkContext variable transient in SparkContextFunctions (#373)
 * Fixed saving to tables with uppercase column names (#377)

1.0.3
 * Fixed handling of Cassandra rpc_address set to 0.0.0.0 (#332)

1.0.2
 * Fixed batch counter columns updates (#234, #316)
 * Expose both rpc addresses and local addresses of cassandra nodes in partition
   preferred locations (#325)
 * Cleaned up the SBT assembly task and added build documentation
   (backport of #315)

1.0.1
 * Add logging of error message when asynchronous task fails in AsyncExecutor.
   (#265)
 * Fix connection problems with fetching token ranges from hosts with
   rpc_address different than listen_address.
   Log host address(es) and ports on connection failures.
   Close thrift transport if connection fails for some reason after opening the transport,
   e.g. authentication failure.
 * Upgrade cassandra driver to 2.0.6.

1.0.0
 * Fix memory leak in PreparedStatementCache leaking PreparedStatements after
   closing Cluster objects. (#183)
 * Allow multiple comma-separated hosts in spark.cassandra.connection.host

1.0.0 RC 6
 * Fix reading a Cassandra table as an RDD of Scala class objects in REPL

1.0.0 RC 5
 * Added assembly task to the build, in order to build fat jars. (#126)
   - Added a system property flag to enable assembly for the demo module
     which is disabled by default.
   - Added simple submit script to submit a demo assembly jar to a local
     spark master
 * Fix error message on column conversion failure. (#208)
 * Add toMap and nameOf methods to CassandraRow.
   Reduce size of serialized CassandraRow. (#194)
 * Fixed a bug which caused problems with connecting to Cassandra under
   heavy load (#185)